force-app/main/default/objects/Task_Log__c/Task_Log__c.object-meta.xml
<CustomObject>
    <label>Task Log</label>
    <nameField>
        <displayFormat>TL-{000000}</displayFormat>
        <label>Task Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>