force-app/main/default/objects/Task_Log__c/fields/Completed_Time_min__c.field-meta.xml
<CustomField>
    <fullName>Completed_Time_min__c</fullName>
    <formula>( Completed_Time__c - CreatedDate)*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Time(min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>