force-app/main/default/objects/Task_Log__c/fields/Hand_Off__c.field-meta.xml
<CustomField>
    <fullName>Hand_Off__c</fullName>
    <label>Hand Off</label>
    <type>DateTime</type>
</CustomField>