force-app/main/default/objects/Task_Log__c/fields/Hand_Off_Time__c.field-meta.xml
<CustomField>
    <fullName>Hand_Off_Time__c</fullName>
    <formula>( Hand_Off__c  - CreatedDate)*24*60</formula>
    <label>Hand Off Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>