force-app/main/default/objects/Task_Log__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipLabel>Task Logs</relationshipLabel>
    <relationshipName>User_Story_Task_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>