force-app/main/default/objects/Task_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>User_Story__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>